

Directory modules/bluespec/common/fpgaenv/fpga-components
 user-clock-pll.bsv        Locally Added               0 
 user-clock.bsv            Locally Modified          281 
 user-clock-pll.v          Locally Added               0 
 hardware-fpga-components-virtex5.awb Locally Modified          281 

Added support for using PLLs as frequency synthesizers.

----------
mcadler     Date: Wed Sep 23 10:08:00 EDT 2009  CSN: CSN-platforms-283
                  Wed Sep 23 14:08:00 UTC 2009


Directory modules/bluespec/common/fpgaenv/toplevel-wires/xilinx
 htg-v5-pcie-toplevel-wires.awb Locally Modified          282 
 xup-toplevel-wires.awb    Locally Modified          282 

Directory modules/bluespec/common/fpgaenv/physical-platform/xilinx_xup
 xup-physical-platform.awb Locally Modified          282 

Directory modules/bluespec/common/fpgaenv/physical-platform/htg_virtex5/pcie-enabled
 htg-v5-pcie-enabled.awb   Locally Modified          282 

Directory modules/bluespec/common/fpgaenv/physical-platform/null
 null-physical-platfrom.awb Locally Modified          282 

Use Elliott's new FPGA_PART_XILINX instead of FPGA_PART.

----------
mcadler     Date: Thu Sep 24 17:18:03 EDT 2009  CSN: CSN-platforms-284
                  Thu Sep 24 21:18:03 UTC 2009


Directory modules/bluespec/common/fpgaenv/fpga-components
 user-clock-pll.bsv        Locally Modified          283 
 user-clock-pll.v          Locally Modified          283 

Directory modules/project
 SCons.top.template        Locally Modified          283 

Directory drivers/linux/hasim
 hasim-fpga-ctrl.c         Locally Modified          283 

- Add input divider configuration option to PLL configuration.
- SCons script no longer builds a download script since not all FPGAs are
  programmed using Xilinx impact.
- hasim-fpga-ctrl can now deal with ACP.  The code is getting a bit messy
  since it has no idea whether the machine uses PCIe or not.  A configuration
  file would be good.
