@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-284
+CSN=CSN-platforms-285
 Dependencies=hasim/HEAD
